@@ -147,11 +147,7 @@ int	get_value_simple(DC_ITEM *item, AGENT_RESULT *result)
 
 	init_request(&request);
 
-	if (SUCCEED != parse_item_key(item->key, &request))
-	{
-		SET_MSG_RESULT(result, zbx_strdup(NULL, "Key is badly formatted"));
-		goto notsupported;
-	}
+	parse_item_key(item->key, &request);
 
 	request.lastlogsize = item->lastlogsize;
 
@@ -184,7 +180,7 @@ int	get_value_simple(DC_ITEM *item, AGENT_RESULT *result)
 
 	if (NOTSUPPORTED == ret && !ISSET_MSG(result))
 		SET_MSG_RESULT(result, zbx_strdup(NULL, "Simple check is not supported"));
-notsupported:
+
 	free_request(&request);
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%s", __function_name, zbx_result_string(ret));
